# GRPC_Demo

./: .gitignore  Dockerfile_cpp  Dockerfile_frontpage  Dockerfile_python  README.md  configure.sh  docker-compose.yml
cpp_demo/: CMakeLists.txt  RPCServer.cpp  RPCServer.h  main.cpp  proto_generate.sh
cpp_demo/cmake/: FindProtobuf.cmake  FindgRPC.cmake
frontpage/: frontpage.py  grpc_functions.py  uwsgi.ini
frontpage/templates/: index.html
protofiles/: demo.proto
python_demo/: proto_generator.py  server.py  test_client.py
